build(cpp): 添加 C++标准库编译选项
- 在 CMakeLists.txt 中添加 CMAKE_CXX_STANDARD_LIBRARIES变量
- 设置 CMAKE_CXX_STANDARD_LIBRARIES 为 -fno-rtti

--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -22,6 +22,8 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-inline")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-exceptions")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-rtti")
 
+set(CMAKE_CXX_STANDARD_LIBRARIES  "${CMAKE_CXX_FLAGS} -fno-rtti")
+
 #set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -fvisibility=hidden")
 #set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -fvisibility=hidden")
 #set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -fvisibility-inlines")
