--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -7,6 +7,9 @@ edition = "2021"
 
 [dependencies]
 chrono = "0.4.23"
+once_cell = "1.8.0"
+lazy_static = "1.4.0"
+ansi_term = "0.12.1"
 
 [[test]]
 name = "logmanagertests"
